[tool.poetry]
name = "saic-unsupervised-landmark-detection-neurips2019"
version = "0.1.0"
description = ""
authors = ["babaamata <sakakibaraki@fuji.waseda.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pytorch = "^1.0.2"
numpy = "^1.21.4"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
